fix bottom lattice work z-index issue

--- a/less/components/about-section.less
+++ b/less/components/about-section.less
@@ -169,7 +169,7 @@
 .section-about:before {
   .sprite('lattice-1');
   content: "";
-  z-index: 1;
+  z-index: 4;
   position: absolute;
   bottom: 0;
   left: 50%;
